# platonics_dataset

./: CMakeLists.txt  README.md  challenge.yaml  package.xml  slider.yaml
execution_data/: README.md  convert_to_csv.py  data_trial1.csv  data_trial1.pkl  data_trial2.csv  data_trial2.pkl  data_trial3.csv  data_trial3.pkl  data_trial4.csv  data_trial4.pkl  data_trial5.csv  data_trial5.pkl
scripts/: compress_trajectory.py  debug_trajectory.py
trajectories/: challenge.yaml  slider.yaml
