<?xml version="1.0"?>
<package format="2">
  <name>platonics_dataset</name>
  <version>0.0.0</version>
  <description>The platonics_dataset package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="max.spahn@protonmail.com">mspahn</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
